add led overlay

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -398,4 +398,9 @@
     <bool name="config_deviceHasButtonBacklight">true</bool>
     <bool name="config_deviceHasVariableButtonBrightness">true</bool>
 
+    <!-- Does the battery LED support multiple colors? Used to decide if the user can change the colors -->
+    <bool name="config_multiColorBatteryLed">true</bool>
+
+    <bool name="config_multiColorNotificationLed">true</bool>
+
 </resources>
